--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,24 @@
   <title>ClientOF</title>
   <base href="/">
 
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+
+<script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+
+
+    <script src="./assets/js/jspruebas.js"></script>
+       <script type="text/javascript" src="./assets/js/modernizr.custom.js"></script>
+    <script type="text/javascript" src="./assets/js/smoothscroll.js"></script>
+    <script type="text/javascript" src="./assets/js/custom-scripts.js"></script>
+
+
 </head>
 <body>
   <app-root></app-root>
